# simple-c-compiler

./: .gitignore  DEMO.md  README.md  grammar.md  lexer.l  makefile  operations.c  operations.h  parser.y  report.md  symbol_table.c  symbol_table.h
inputs/invalid/: div_by_zero.txt  undefined_var.txt
src/: CMakeLists.txt  grammar.md  lexer.l  makefile  operations.c  parser.y  symbol_table.c
src/inputs/invalid/: invalid_operation.txt  invalid_token.txt  type_mismatch.txt  var_redeclaration.txt
src/inputs/valid/: control_flow.txt  operations_test.txt
test/invalid-inputs/: invalid_input1.txt  invalid_input2.txt  invalid_input3.txt  invalid_input4.txt
test/valid-inputs/: valid_input1.txt  valid_input2.txt
